# ascii-literal

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
compile-tests/fail/: not_ascii.rs
compile-tests/pass/: const.rs  empty.rs  roundtrip.rs
impl/: Cargo.toml
impl/src/: lib.rs
src/: lib.rs
tests/: compile_tests.rs  runner.rs  tests.rs
tests/compile-fail/: not_all_ascii.rs  not_ascii.rs
tests/fail/: not_all_ascii.rs  not_all_ascii.stderr  not_ascii.stderr
tests/run-pass/: empty.rs  roundtrip.rs
