[package]
name = "ascii-literal"
version = "0.1.0"
authors = ["Conner Ebbinghaus <connerebbinghaus@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
proc-macro-hack = "0.5"
ascii-literal-impl={path="impl"}
ascii = "1.0"
doc-comment = "0.3"

[dev-dependencies]
compiletest_rs = "*"

[workspace]
members = [".", "impl"]